# fullround-key-recovery

./: .gitattributes  .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  requirements.txt
causal/: aes128_fips197_metal_width41_recovery_v1.causal  aes256_fips197_metal_width41_recovery_v1.causal  ascon_aead128_metal_width40_a256_recovery_v1.causal  blake3_keyed_metal_recovery_v1.causal  blake3_keyed_official_b3sum_root_confirmation_v1.causal  chacha20_metal_width40_partial_key_recovery_v1.causal  chacha20_round20_causal_search_gain_panel_a296_v1.causal  chacha20_round20_cross_material_composite_recovery_canonical_v1.causal  chacha20_round20_cross_material_composite_recovery_v1.causal  chacha20_round20_cross_material_order_v1.causal  chacha20_round20_holdout_selected_w45_recovery_a322_v1.causal  chacha20_round20_holdout_selected_w46_recovery_a325_v1.causal  chacha20_round20_multitarget_panel_root_confirmation_a286_v1.causal  chacha20_round20_multitarget_t01_composite_recovery_canonical_v1.causal  chacha20_round20_multitarget_t01_composite_recovery_v1.causal  chacha20_round20_multitarget_t01_order_v1.causal  chacha20_round20_multitarget_t02_composite_recovery_canonical_v1.causal  chacha20_round20_multitarget_t02_composite_recovery_v1.causal  chacha20_round20_multitarget_t02_order_v1.causal  chacha20_round20_multitarget_t03_composite_recovery_canonical_v1.causal  chacha20_round20_multitarget_t03_composite_recovery_v1.causal  chacha20_round20_multitarget_t03_order_v1.causal  chacha20_round20_multitarget_t04_composite_recovery_canonical_v1.causal  (+21 more)
(+577 files in other folders)
