[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fullround-key-recovery"
version = "1.2.0"
description = "Ten reproducible full-round residual-key recovery anchors across nine cipher families"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "David Tom Foss", email = "d.foss@ieee.org"},
]
keywords = ["cryptanalysis", "key recovery", "ChaCha20", "Salsa20", "Speck", "SIMON", "RC5", "PRESENT", "Ascon", "AES", "Metal"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Security :: Cryptography",
]
dependencies = ["msgpack>=1.0,<2", "xxhash>=3,<4"]

[project.urls]
Repository = "https://github.com/DT-Foss/fullround-key-recovery"
Documentation = "https://github.com/DT-Foss/fullround-key-recovery#readme"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.4", "ruff>=0.15"]

[project.scripts]
fullround-verify = "fullround_key_recovery.cli:main"
fullround-reproduce = "fullround_key_recovery.reproduce:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["src/fullround_key_recovery/_dotcausal"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
